# confidential-market-maker-credit-network

./: .gitignore  DEMO_SCRIPT.md  FULL_PRESENTATION_GUIDE.md  README.md  package.json  tsconfig.json
apps/api/src/: server.ts
apps/localnet/src/: devnet-smoke.ts  e2e-flow.ts  exchange-test.ts  local-integration.ts  magicblock-test.ts  note-vault-test.ts  privacy-spectrum-test.ts  surfpool-smoke.ts  token2022-test.ts
apps/web-next/: package.json
apps/web-next/scripts/: test-flow.mjs
apps/web-next/src/app/: globals.css  layout.tsx  page.tsx
apps/web-next/src/app/api/demo/collateral/: route.ts
apps/web-next/src/app/api/demo/credit-line/: route.ts
apps/web-next/src/app/api/demo/privacy-options/: route.ts
apps/web-next/src/app/api/health/: route.ts
apps/web-next/src/app/exchange/: page.tsx
apps/web-next/src/app/trade/: page.tsx
apps/web-next/src/components/: Dashboard.tsx  RealApp.tsx  WalletProvider.tsx
apps/web-next/src/lib/: demo-data.ts  exchange-store.ts  magicblock.ts  note-vault.ts  persistence.ts  price-feed.ts  privacy-spectrum.ts  program.ts  risk-engine.ts  sha256.ts  stealth-settlement.ts  token2022.ts  usdc.ts
apps/web/src/: app.css  app.js  index.html
apps/worker/src/: index.ts
docs/: api.md  architecture.md  reality-boundary.md  surfpool.md
docs/superpowers/plans/: 2026-05-26-pinocchio-credit-vault.md
programs/credit-vault/: Cargo.toml
programs/credit-vault/deployments/: devnet-2026-05-29.json  surfpool-2026-05-26.json
programs/credit-vault/src/: instruction.rs  lib.rs  mb.rs  processor.rs  state.rs
(+15 files in other folders)
