[package]
name = "confidential-credit-vault"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
bpf-entrypoint = []

[dependencies]
pinocchio = { version = "0.11.1", features = ["cpi"] }
pinocchio-pubkey = { version = "0.3", default-features = false, features = ["const"] }
solana-address = { version = ">=2, <3", default-features = false, features = ["curve25519"] }
